fixed button contrast

--- a/css/cat.scss
+++ b/css/cat.scss
@@ -243,8 +243,6 @@ nav {
             border: none;
             width: 120px;
             height: 50px;
-            color: #ffdcdc;
-            text-shadow: 0 0 10px $background;
             text-align: center;
             text-decoration: none;
             font-size: 18px;
@@ -256,6 +254,13 @@ nav {
                 color: #e6e6e683;
                 box-shadow: 0 9px rgb(29, 29, 29);
                 transform: translateY(4px);
+            }
+            p {
+                border-radius: 10%;
+                color: $offwhite;
+                text-shadow: 0 0 20px $background;
+                background-color: rgba(32, 32, 32, 0.438);
+                padding: 3px;
             }
         }
     }
